# uw-match-admin

./: .gitmodules  CMakeLists.txt  README.md  upload_replays.sh
.github/workflows/: tests.yml
sources/: CMakeLists.txt  main.cpp  main.cs
